# Dual

./: .gitignore  Axis.cpp  Axis.hpp  CMakeLists.txt  Control.cpp  Control.hpp  DataModel.cpp  DataModel.hpp  Display.cpp  Display.hpp  Enums.hpp  Equation.cpp  Equation.hpp  GraphicalObject.cpp  GraphicalObject.hpp  LinearEquation.cpp  Point.cpp  Point.hpp  Quadtree.cpp  Quadtree.hpp  Shader.cpp  Shader.hpp  Util.cpp  Util.hpp  dual.cpp  ogl.cpp  ogl.hpp  test.cpp
Resources/: primal.vs
Resources/Shaders/: Text.fs  Text.vs  primal.fs  primal.vs
